--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/postcss": "^4.1.13",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
+    "swiper": "^12.0.1",
     "tailwindcss": "^4.1.13",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
